syntax = "proto3";

package events;

option go_package = "github.com/burakmert236/goodswipe/generated/events";

message UserCreated {
    string userId = 1;
    string displayName = 2;
    int64 timeStamp = 3;
} 

message UserLevelUp {
    string userId = 1;
    int32 levelIncrease = 2;
    int32 newLevel = 3;
    int64 timeStamp = 4;
} 