syntax = "proto3";

package grpc;

option go_package = "github.com/burakmert236/goodswipe-common/generated/grpc";

import "v1/grpc/common.proto";

// Services
service TournamentService {
    rpc EnterTournament(EnterTournamentRequest) returns (EnterTournamentResponse);
    rpc ClaimReward(ClaimRewardRequest) returns (ClaimRewardResponse);
}

// Requests
message EnterTournamentRequest {
    string user_id = 1;
}

message ClaimRewardRequest {
    string user_id = 1;
    string tournament_id = 2;
}

// Responses

message EnterTournamentResponse {
    string tournament_id = 1;
    string group_id = 2;
}

message ClaimRewardResponse {
    string tournament_id = 1;
    int32 reward = 2;
}